<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home_nav"/>
        <item
            android:id="@+id/nav_running_event"
            android:icon="@drawable/ic_event_running_nav"
            android:title="@string/menu_eventR" />
        <item
            android:id="@+id/nav_coming_event"
            android:icon="@drawable/ic_event_coming_event_nav"
            android:title="@string/menu_eventN" />
        <item
            android:id="@+id/nav_archive_event"
            android:icon="@drawable/ic_archive"
            android:title="@string/event_archive" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite_nav"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_college"
            android:icon="@drawable/ic_college_nav"
            android:title="@string/menu_college" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_nav"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share"/>
        <item
            android:icon="@drawable/ic_info_nav"
            android:id="@+id/nav_about_us"
            android:title="@string/menu_aboutUs" />
        <item
            android:icon="@drawable/ic_exit_to_app_nav"
            android:id="@+id/nav_logout"
            android:title="@string/menu_signOut" />
    </group>
</menu>
